@@ -2,12 +2,12 @@ package com.dev.servlet.infrastructure.persistence.dao;
 
 import com.dev.servlet.domain.model.ConfirmationToken;
 import com.dev.servlet.infrastructure.persistence.dao.base.BaseDAO;
+import jakarta.enterprise.inject.Model;
+import jakarta.persistence.TypedQuery;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Root;
 
-import javax.enterprise.inject.Model;
-import javax.persistence.TypedQuery;
-import javax.persistence.criteria.CriteriaBuilder;
-import javax.persistence.criteria.CriteriaQuery;
-import javax.persistence.criteria.Root;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
@@ -26,7 +26,7 @@ public class ConfirmationTokenDAO extends BaseDAO<ConfirmationToken, String> {
         query.where(cb.equal(root.get("token"), token));
         TypedQuery<ConfirmationToken> typedQuery = em.createQuery(query);
         List<ConfirmationToken> results = typedQuery.getResultList();
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
     }
 }
 
